Infill data from resume json

--- a/components/education.html
+++ b/components/education.html
@@ -1,4 +1,11 @@
-<div>
-    <h1>EDUCATION</h1>
-
+<div class="vertical">
+    <div class="horizontal">
+        <div>$$degree$$</div>
+        <div>$$major$$</div>
+    </div>
+    <div class="horizontal">
+        <div>$$institution$$</div>
+        <div>$$years$$</div>
+    </div>
+    <div>$$gpa$$</div>
 </div>
