--- a/components/experience.html
+++ b/components/experience.html
@@ -1,4 +1,7 @@
-<div class="header">
-    <h1>EDUCATION</h1>
-
+<div class="vertical">
+    <div class="horizontal">
+        <div>$$company$$ - $$position$$ - $$topic$$</div>
+        <div>$$location$$  $$years$$</div>
+    </div>
+    <div>$$description$$</div>
 </div>
