--- a/components/publications.html
+++ b/components/publications.html
@@ -1,4 +1,7 @@
-<div>
-    <h1>EDUCATION</h1>
-
+<div class="vertical">
+    <div class="horizontal">
+        <div>$$title$$</div>
+        <div>$$author$$  $$venue$$</div>
+    </div>
+    <div>$$description$$</div>
 </div>
