--- a/components/skills.html
+++ b/components/skills.html
@@ -1,4 +1,4 @@
-<div class="header">
-    <h1>EDUCATION</h1>
-
+<div class="horizontal">
+    <div>$$language$$</div>
+    <div>$$details$$</div>
 </div>
