MVP template resume

--- a/components/education.html
+++ b/components/education.html
@@ -1,6 +1,6 @@
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>$$degree$$</div>
+        <div class="title">$$degree$$</div>
         <div>$$major$$</div>
     </div>
     <div class="horizontal">
