--- a/components/experience.html
+++ b/components/experience.html
@@ -1,7 +1,14 @@
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>$$company$$ - $$position$$ - $$topic$$</div>
-        <div>$$location$$  $$years$$</div>
+        <span>
+            <span class="title">$$company$$</span>
+            <span>- $$position$$ - $$topic$$</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">$$location$$</span>
+            <span>$$years$$</span>
+        </div>
     </div>
-    <div>$$description$$</div>
+    <div class="small_margin">$$description$$</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
