--- a/components/languages.html
+++ b/components/languages.html
@@ -1,4 +1,7 @@
 <div class="horizontal">
-    <div>$$language$$</div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        $$language$$
+    </div>
     <div>$$proficiency$$</div>
 </div>
