--- a/components/projects.html
+++ b/components/projects.html
@@ -1,7 +1,10 @@
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>$$title$$</div>
-        <div>$$location$$  $$years$$</div>
+        <div class="title">$$title$$</div>
+        <div>
+            <span style="margin-right: 10px">$$location$$</span>
+            <span>$$years$$</span>
+        </div>
     </div>
-    <div>$$description$$</div>
+    <div class="small_margin">$$description$$</div>
 </div>
