--- a/components/publications.html
+++ b/components/publications.html
@@ -1,7 +1,10 @@
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>$$title$$</div>
-        <div>$$author$$  $$venue$$</div>
+        <div class="title">$$title$$</div>
+        <div>
+            <span style="margin-right: 10px">$$author$$</span>
+            <span>$$venue$$</span>
+        </div>
     </div>
-    <div>$$description$$</div>
+    <div class="small_margin">$$description$$</div>
 </div>
