--- a/components/info.html
+++ b/components/info.html
@@ -1,4 +1,4 @@
-<a href="$$url$$" target="_blank">
-    <img src="$$icon$$" alt="">
+<div style="display: inline-flex; align-items: center; text-decoration: none;">
+    <img src="$$icon$$" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
     $$text$$
-</a>
+</div>
