justify paragarphs and round down font size for print

--- a/components/experience.html
+++ b/components/experience.html
@@ -9,6 +9,6 @@
             <span>$$years$$</span>
         </div>
     </div>
-    <div class="small_margin">$$description$$</div>
+    <div class="small_margin" style="text-align: justify">$$description$$</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
