--- a/components/projects.html
+++ b/components/projects.html
@@ -6,5 +6,5 @@
             <span>$$years$$</span>
         </div>
     </div>
-    <div class="small_margin">$$description$$</div>
+    <div class="small_margin" style="text-align: justify">$$description$$</div>
 </div>
