--- a/components/publications.html
+++ b/components/publications.html
@@ -6,5 +6,5 @@
             <span>$$venue$$</span>
         </div>
     </div>
-    <div class="small_margin">$$description$$</div>
+    <div class="small_margin" style="text-align: justify">$$description$$</div>
 </div>
