--- a/components/publications.html
+++ b/components/publications.html
@@ -1,6 +1,10 @@
 <div class="vertical medium_margin">
     <div class="horizontal">
-        <div class="title">$$title$$</div>
+        <span>
+            <span class="title">$$title$$</span>
+            <span>- $$topic$$</span>
+        </span>
+
         <div>
             <span style="margin-right: 10px">$$author$$</span>
             <span>$$venue$$</span>
