--- a/components/publications.html
+++ b/components/publications.html
@@ -2,7 +2,7 @@
     <div class="horizontal">
         <span>
             <span class="title">$$title$$</span>
-            <span>- $$topic$$</span>
+<!--            <span>- $$topic$$</span>-->
         </span>
 
         <div>
