--- a/marker.css
+++ b/marker.css
@@ -64,10 +64,10 @@
     border-radius: 0.2em 0.7000000000000001em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.3),
-    rgba(197, 222, 242, 0.9) 4%,
-    rgba(197, 222, 242, 0.1) 94%,
-    rgba(197, 222, 242, 0.9)
+    rgba(242, 198, 223, 0.3),
+    rgba(242, 198, 223, 0.9) 4%,
+    rgba(242, 198, 223, 0.1) 94%,
+    rgba(242, 198, 223, 0.9)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -105,10 +105,10 @@
     border-radius: 0.8em 0.09999999999999995em;
     background-image: linear-gradient(
     to right,
-    rgba(250, 223, 161, 0.1),
-    rgba(250, 223, 161, 0.9) 5%,
-    rgba(250, 223, 161, 0.3) 95%,
-    rgba(250, 223, 161, 0.5)
+    rgba(197, 222, 242, 0.1),
+    rgba(197, 222, 242, 0.9) 5%,
+    rgba(197, 222, 242, 0.3) 95%,
+    rgba(197, 222, 242, 0.5)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -269,10 +269,10 @@
     border-radius: 0.5em 0.5em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.3),
-    rgba(197, 222, 242, 0.6) 1%,
-    rgba(197, 222, 242, 0.3) 99%,
-    rgba(197, 222, 242, 0.5)
+    rgba(250, 223, 161, 0.3),
+    rgba(250, 223, 161, 0.6) 1%,
+    rgba(250, 223, 161, 0.3) 99%,
+    rgba(250, 223, 161, 0.5)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -310,10 +310,10 @@
     border-radius: 0.7em 0.20000000000000004em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.1),
-    rgba(197, 222, 242, 0.5) 4%,
-    rgba(197, 222, 242, 0.2) 99%,
-    rgba(197, 222, 242, 0.7)
+    rgba(242, 198, 223, 0.1),
+    rgba(242, 198, 223, 0.5) 4%,
+    rgba(242, 198, 223, 0.2) 99%,
+    rgba(242, 198, 223, 0.7)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -351,10 +351,10 @@
     border-radius: 0.3em 0.7999999999999999em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.2),
-    rgba(197, 222, 242, 0.6) 6%,
-    rgba(197, 222, 242, 0.3) 99%,
-    rgba(197, 222, 242, 0.7)
+    rgba(242, 198, 223, 0.2),
+    rgba(242, 198, 223, 0.6) 6%,
+    rgba(242, 198, 223, 0.3) 99%,
+    rgba(242, 198, 223, 0.7)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -392,10 +392,10 @@
     border-radius: 0.5em 0.6em;
     background-image: linear-gradient(
     to right,
-    rgba(218, 204, 239, 0.3),
-    rgba(218, 204, 239, 0.6) 4%,
-    rgba(218, 204, 239, 0.1) 96%,
-    rgba(218, 204, 239, 0.8)
+    rgba(197, 222, 242, 0.3),
+    rgba(197, 222, 242, 0.6) 4%,
+    rgba(197, 222, 242, 0.1) 96%,
+    rgba(197, 222, 242, 0.8)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -408,3 +408,126 @@
   transition: clip-path 0.6s ease-in-out;
 }
 /* END OF MARKER marker9 */
+
+/* START OF MARKER marker10 */
+.marker10 {
+    margin: 0;
+    padding: 0;
+    border-radius: 0.3em 0.6em;
+    position: relative;
+    background: transparent;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    z-index: 0;
+}
+
+.marker10::before {
+    content: "";
+    position: absolute;
+    inset: -0.1em -0.4em;
+    top: -0.1em;
+    left: -0.4em;
+    right: -0.4em;
+    bottom: -0.1em;
+    border-radius: 0.3em 0.6em;
+    background-image: linear-gradient(
+    to right,
+    rgba(197, 222, 242, 0.1),
+    rgba(197, 222, 242, 0.6) 4%,
+    rgba(197, 222, 242, 0.1) 96%,
+    rgba(197, 222, 242, 0.7)
+    );
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 0s;
+    z-index: -1;
+    pointer-events: none;
+}
+
+.marker10.animate-highlight::before {
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.6s ease-in-out;
+}
+/* END OF MARKER marker10 */
+
+/* START OF MARKER marker11 */
+.marker11 {
+    margin: 0;
+    padding: 0;
+    border-radius: 0.4em 0.5em;
+    position: relative;
+    background: transparent;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    z-index: 0;
+}
+
+.marker11::before {
+    content: "";
+    position: absolute;
+    inset: -0.1em -0.4em;
+    top: -0.1em;
+    left: -0.4em;
+    right: -0.4em;
+    bottom: -0.1em;
+    border-radius: 0.4em 0.5em;
+    background-image: linear-gradient(
+    to right,
+    rgba(197, 222, 242, 0.1),
+    rgba(197, 222, 242, 0.8) 2%,
+    rgba(197, 222, 242, 0.2) 96%,
+    rgba(197, 222, 242, 0.8)
+    );
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 0s;
+    z-index: -1;
+    pointer-events: none;
+}
+
+.marker11.animate-highlight::before {
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.6s ease-in-out;
+}
+/* END OF MARKER marker11 */
+
+/* START OF MARKER marker12 */
+.marker12 {
+    margin: 0;
+    padding: 0;
+    border-radius: 0.5em 0.4em;
+    position: relative;
+    background: transparent;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    z-index: 0;
+}
+
+.marker12::before {
+    content: "";
+    position: absolute;
+    inset: -0.1em -0.4em;
+    top: -0.1em;
+    left: -0.4em;
+    right: -0.4em;
+    bottom: -0.1em;
+    border-radius: 0.5em 0.4em;
+    background-image: linear-gradient(
+    to right,
+    rgba(218, 204, 239, 0.3),
+    rgba(218, 204, 239, 0.9) 4%,
+    rgba(218, 204, 239, 0.2) 96%,
+    rgba(218, 204, 239, 0.9)
+    );
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 0s;
+    z-index: -1;
+    pointer-events: none;
+}
+
+.marker12.animate-highlight::before {
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.7s ease-in-out;
+}
+/* END OF MARKER marker12 */
